--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "shopping-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "seed": "node scripts/seedProducts.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.25",
+    "expo-constants": "~18.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.7",
     "react-native-dotenv": "^3.4.11",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
   "private": true
