--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@reduxjs/toolkit": "^2.11.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
