--- a/app.json
+++ b/app.json
@@ -37,7 +37,14 @@
       "router": {},
       "eas": {
         "projectId": "5ea3f9b3-5ef7-404a-8c65-e96fded1e25b"
-      }
+      },
+      "FIREBASE_API_KEY": "AIzaSyBd4YTAW8lXwbZi7WkjXNM-PEVzxNGcbcI",
+      "FIREBASE_AUTH_DOMAIN": "shopiee-97ab8.firebaseapp.com",
+      "FIREBASE_PROJECT_ID": "shopiee-97ab8",
+      "FIREBASE_STORAGE_BUCKET": "shopiee-97ab8.firebasestorage.app",
+      "FIREBASE_MESSAGING_SENDER_ID": "66106372266",
+      "FIREBASE_APP_ID": "1:66106372266:web:e59f14c429d0bfdf2460d3",
+      "FIREBASE_MEASUREMENT_ID": "G-Z6KGZB3SD6"
     },
     "owner": "shelu18",
     "runtimeVersion": {
