--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 
 # dependencies
 node_modules/
+
+# Local environment variables (NEVER commit these!)
 .env
+.env.local
+.env*.local
+
 # Expo
 .expo/
 dist/
