--- a/eas.json
+++ b/eas.json
@@ -6,6 +6,13 @@
       "distribution": "internal",
       "channel": "development",
       "env": {
+        "FIREBASE_API_KEY": "AIzaSyBd4YTAW8lXwbZi7WkjXNM-PEVzxNGcbcI",
+        "FIREBASE_AUTH_DOMAIN": "shopiee-97ab8.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "shopiee-97ab8",
+        "FIREBASE_STORAGE_BUCKET": "shopiee-97ab8.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "66106372266",
+        "FIREBASE_APP_ID": "1:66106372266:web:e59f14c429d0bfdf2460d3",
+        "FIREBASE_MEASUREMENT_ID": "G-Z6KGZB3SD6",
         "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "66106372266-nlci3m6avt7o0a7reqlpt12t9b9vdt41.apps.googleusercontent.com"
       }
     },
@@ -16,6 +23,13 @@
       },
       "channel": "preview",
       "env": {
+        "FIREBASE_API_KEY": "AIzaSyBd4YTAW8lXwbZi7WkjXNM-PEVzxNGcbcI",
+        "FIREBASE_AUTH_DOMAIN": "shopiee-97ab8.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "shopiee-97ab8",
+        "FIREBASE_STORAGE_BUCKET": "shopiee-97ab8.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "66106372266",
+        "FIREBASE_APP_ID": "1:66106372266:web:e59f14c429d0bfdf2460d3",
+        "FIREBASE_MEASUREMENT_ID": "G-Z6KGZB3SD6",
         "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "66106372266-nlci3m6avt7o0a7reqlpt12t9b9vdt41.apps.googleusercontent.com"
       }
     },
@@ -23,6 +37,13 @@
       "android": { "buildType": "app-bundle" },
       "channel": "production",
       "env": {
+        "FIREBASE_API_KEY": "AIzaSyBd4YTAW8lXwbZi7WkjXNM-PEVzxNGcbcI",
+        "FIREBASE_AUTH_DOMAIN": "shopiee-97ab8.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "shopiee-97ab8",
+        "FIREBASE_STORAGE_BUCKET": "shopiee-97ab8.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "66106372266",
+        "FIREBASE_APP_ID": "1:66106372266:web:e59f14c429d0bfdf2460d3",
+        "FIREBASE_MEASUREMENT_ID": "G-Z6KGZB3SD6",
         "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "66106372266-nlci3m6avt7o0a7reqlpt12t9b9vdt41.apps.googleusercontent.com"
       }
     }
