--- a/eas.json
+++ b/eas.json
@@ -6,14 +6,14 @@
       "distribution": "internal",
       "channel": "development",
       "env": {
-        "FIREBASE_API_KEY": "AIzaSyBd4YTAW8lXwbZi7WkjXNM-PEVzxNGcbcI",
-        "FIREBASE_AUTH_DOMAIN": "shopiee-97ab8.firebaseapp.com",
-        "FIREBASE_PROJECT_ID": "shopiee-97ab8",
-        "FIREBASE_STORAGE_BUCKET": "shopiee-97ab8.firebasestorage.app",
-        "FIREBASE_MESSAGING_SENDER_ID": "66106372266",
-        "FIREBASE_APP_ID": "1:66106372266:web:e59f14c429d0bfdf2460d3",
-        "FIREBASE_MEASUREMENT_ID": "G-Z6KGZB3SD6",
-        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "66106372266-nlci3m6avt7o0a7reqlpt12t9b9vdt41.apps.googleusercontent.com"
+        "FIREBASE_API_KEY": "your_credentials",
+        "FIREBASE_AUTH_DOMAIN": "your_credentials",
+        "FIREBASE_PROJECT_ID": "your_credentials",
+        "FIREBASE_STORAGE_BUCKET": "your_credentials",
+        "FIREBASE_MESSAGING_SENDER_ID": "your_credentials",
+        "FIREBASE_APP_ID": "your_credentials",
+        "FIREBASE_MEASUREMENT_ID": "your_credentials",
+        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "your_credentials"
       }
     },
     "preview-apk": {
